--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apollo-boost": "^0.4.7",
     "core-js": "^3.6.4",
+    "graphql": "^15.0.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-apollo": "^3.0.3",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
@@ -35,6 +38,7 @@
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
+    "vue-cli-plugin-apollo": "^0.21.3",
     "vue-template-compiler": "^2.6.11"
   }
 }
